Modification pour passer d'un page française à une page anglaise

--- a/en/effetmatilda.html
+++ b/en/effetmatilda.html
@@ -23,7 +23,7 @@
         </section>
         <h1 class="header__title">The Matilda <br> Effect</h1>
         <div class="language-selector" role="navigation" aria-label="Language selector">
-            <a href="/fr/" class="language-selector__link language-selector__link--active"
+            <a href="/fr/effetmatilda.html" class="language-selector__link language-selector__link--active"
                 aria-label="Switch to French version">EN</a>
         </div>
     </header>
