--- a/en/glossaire.html
+++ b/en/glossaire.html
@@ -23,8 +23,8 @@
         </section>
         <h1 class="header__title">Glossary</h1>
         <div class="language-selector" role="navigation" aria-label="Language selector">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
-                aria-label="Switch to English version">EN</a>
+            <a href="/fr/glossaire.html" class="language-selector__link language-selector__link--active"
+                aria-label="Switch to French version">EN</a>
         </div>
     </header>
 
@@ -108,11 +108,11 @@
                 <p>A 20th-century British mathematician and logician, he was a key figure in artificial intelligence and
                     cryptanalysis. He recognized the importance of Ada Lovelace's work and drew inspiration from her
                     ideas to develop the theory of the Turing machine, the basis of modern computing.</p>
-                <div class="textmono-title--glossaire">Joan Clarke:</div>
+                <div class="textmono-title--glossaire">Joan Clarke :</div>
                 <p>British mathematician and cryptanalyst who collaborated with Alan Turing to decrypt the Enigma code
                     during World War II. Like Ada Lovelace, she was long overlooked in the history of science despite
                     her major contributions.</p>
-                <div class="textmono-title--glossaire">Jean C. Baudet:</div>
+                <div class="textmono-title--glossaire">Jean C. Baudet :</div>
                 <p>Belgian philosopher, historian, and writer specializing in the history of science and technology. In
                     his work, he analyzes the birth of computer science, the evolution of machine concepts, and the
                     recognition of key figures such as Ada Lovelace.</p>
