--- a/en/scienceada.html
+++ b/en/scienceada.html
@@ -23,8 +23,8 @@
         </section>
         <h1 class="header__title">Science From Ada</h1>
         <div class="language-selector" role="navigation" aria-label="language selector">
-            <a href="/fr/" class="language-selector__link language-selector__link--active"
-                aria-label="Switch to English version">EN</a>
+            <a href="/fr/scienceada.html" class="language-selector__link language-selector__link--active"
+                aria-label="Switch to French version">EN</a>
         </div>
     </header>
 
