--- a/fr/adalovelace.html
+++ b/fr/adalovelace.html
@@ -23,7 +23,7 @@
         </section>
         <h1 class="header__title">Ada <br> Lovelace</h1>
         <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
+            <a href="/en/adalovelace.html" class="language-selector__link language-selector__link--active"
                 aria-label="Passer à la version anglaise">FR</a>
         </div>
     </header>
