--- a/fr/effetmatilda.html
+++ b/fr/effetmatilda.html
@@ -23,7 +23,7 @@
         </section>
         <h1 class="header__title">L'Effet <br> Matilda</h1>
         <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
+            <a href="/en/effetmatilda.html" class="language-selector__link language-selector__link--active"
                 aria-label="Passer à la version anglaise">FR</a>
         </div>
     </header>
@@ -172,7 +172,8 @@
                     <div class="timeline__content">
                         <a href="https://fr.wikipedia.org/wiki/Dorothy_Hodgkin" target="_blank" class="timeline__image"
                             aria-label="En savoir plus sur Dorothy Hodgkin sur Wikipedia (nouvelle fenêtre)">
-                            <img src="../assets/img/professor_dorothy_hodgkin1.avif" alt="Dorothy Hodgkin" loading="lazy">
+                            <img src="../assets/img/professor_dorothy_hodgkin1.avif" alt="Dorothy Hodgkin"
+                                loading="lazy">
                         </a>
                         <span class="timeline__date">1906</span>
                         <h3 class="timeline__title">Dorothy Hodgkin</h3>
