--- a/fr/index.html
+++ b/fr/index.html
@@ -22,7 +22,7 @@
             </div>
         </section>
         <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
+            <a href="/en/index.html" class="language-selector__link language-selector__link--active"
                 aria-label="Passer à la version anglaise">FR</a>
         </div>
     </header>
@@ -118,7 +118,8 @@
         </section>
         <section class="youtube_video">
             <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
-                <source src="../assets/video/Ada Lovelace - L'invention de l'ordinateur _ Cherchez la femme ! _ ARTE.mp4"
+                <source
+                    src="../assets/video/Ada Lovelace - L'invention de l'ordinateur _ Cherchez la femme ! _ ARTE.mp4"
                     type="video/mp4">
                 Votre navigateur ne supporte pas la lecture de vidéos.
             </video>
@@ -131,7 +132,8 @@
             <div class="carousel__container">
                 <a href="adalovelace.html" aria-label="Lire l'article sur Ada Lovelace">
                     <article class="card" role="article" aria-labelledby="card-title-1">
-                        <img src="../assets/img/card1.avif" alt="Illustration pour l'article Ada Lovelace" loading="lazy">
+                        <img src="../assets/img/card1.avif" alt="Illustration pour l'article Ada Lovelace"
+                            loading="lazy">
                         <div class="card__content">
                             <h3 class="card__title" id="card-title-1">Ada Lovelace</h3>
                             <p class="card__text">Découvrez la vie et les contributions d'Ada Lovelace, pionnière de
@@ -178,8 +180,8 @@
 
                 <a href="litterature.html" aria-label="Lire l'article sur Ada dans la littérature">
                     <article class="card" role="article" aria-labelledby="card-title-5">
-                        <img src="../assets/img/card5.avif" alt="Illustration pour l'article sur Ada dans la littérature"
-                            loading="lazy">
+                        <img src="../assets/img/card5.avif"
+                            alt="Illustration pour l'article sur Ada dans la littérature" loading="lazy">
                         <div class="card__content">
                             <h3 class="card__title" id="card-title-5">Ada dans la littérature</h3>
                             <p class="card__text">L'histoire d'Ada Lovelace a inspiré de nombreux ouvrages littéraires
