--- a/fr/theimitationgame.html
+++ b/fr/theimitationgame.html
@@ -23,7 +23,7 @@
         </section>
         <h1 class="header__minititle">The Imitation <br> Game</h1>
         <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
+            <a href="/en/theimitationgame.html" class="language-selector__link language-selector__link--active"
                 aria-label="Passer à la version anglaise">FR</a>
         </div>
     </header>
@@ -134,8 +134,8 @@
             </div>
         </section>
         <section class="image__representation">
-            <img src="../assets/img/Image1_page_Imitation.avif" alt="Image d'Alan Turing dans le film The Imitation Game"
-                loading="lazy">
+            <img src="../assets/img/Image1_page_Imitation.avif"
+                alt="Image d'Alan Turing dans le film The Imitation Game" loading="lazy">
         </section>
     </main>
     <footer class="footer" role="contentinfo">
