--- a/en/adalovelace.html
+++ b/en/adalovelace.html
@@ -23,7 +23,7 @@
         </section>
         <h1 class="header__title">Ada <br> Lovelace</h1>
         <div class="language-selector" role="navigation" aria-label="Language selector">
-            <a href="/fr/" class="language-selector__link language-selector__link--active"
+            <a href="/fr/adalovelace.html" class="language-selector__link language-selector__link--active"
                 aria-label="Switch to French version">EN</a>
         </div>
     </header>
