--- a/en/index.html
+++ b/en/index.html
@@ -22,7 +22,7 @@
             </div>
         </section>
         <div class="language-selector" role="navigation" aria-label="Language selector">
-            <a href="/fr/" class="language-selector__link language-selector__link--active"
+            <a href="/fr/index.html" class="language-selector__link language-selector__link--active"
                 aria-label="Switch to the French version">EN</a>
         </div>
     </header>
