--- a/en/litterature.html
+++ b/en/litterature.html
@@ -23,7 +23,7 @@
         </section>
         <h1 class="header__minititle">Ada in <br> Literature</h1>
         <div class="language-selector" role="navigation" aria-label="Language selector">
-            <a href="/fr/" class="language-selector__link language-selector__link--active"
+            <a href="/fr/litterature.html" class="language-selector__link language-selector__link--active"
                 aria-label="Switch to French version">EN</a>
         </div>
     </header>
