--- a/en/theimitationgame.html
+++ b/en/theimitationgame.html
@@ -23,7 +23,7 @@
         </section>
         <h1 class="header__minititle">The Imitation <br> Game</h1>
         <div class="language-selector" role="navigation" aria-label="Language selector">
-            <a href="/fr/" class="language-selector__link language-selector__link--active"
+            <a href="/fr/theimitationgame.html" class="language-selector__link language-selector__link--active"
                 aria-label="Switch to English version">EN</a>
         </div>
     </header>
