--- a/fr/litterature.html
+++ b/fr/litterature.html
@@ -23,7 +23,7 @@
         </section>
         <h1 class="header__minititle">Ada dans la <br> littérature</h1>
         <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
-            <a href="/en/" class="language-selector__link language-selector__link--active"
+            <a href="/en/litterature.html" class="language-selector__link language-selector__link--active"
                 aria-label="Passer à la version anglaise">FR</a>
         </div>
     </header>
