Ajout de lazy loading sur vidéos

--- a/en/index.html
+++ b/en/index.html
@@ -113,7 +113,7 @@
         <section class="youtube_video">
             <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
                 <source src="../assets/video/The Story of Ada Lovelace_ The World's First Computer Programmer.mp4"
-                    type="video/mp4">
+                    type="video/mp4" loading="lazy">
                 Your browser does not support video playback.
             </video>
         </section>
