--- a/en/theimitationgame.html
+++ b/en/theimitationgame.html
@@ -109,7 +109,7 @@
             <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
                 <source
                     src="../assets/video/The Imitation Game Official Trailer #1 (2014) - Benedict Cumberbatch Movie HD.mp4"
-                    type="video/mp4">
+                    type="video/mp4" loading="lazy">
                 Your browser does not support the video tag.
             </video>
         </section>
