--- a/fr/index.html
+++ b/fr/index.html
@@ -120,7 +120,7 @@
             <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
                 <source
                     src="../assets/video/Ada Lovelace - L'invention de l'ordinateur _ Cherchez la femme ! _ ARTE.mp4"
-                    type="video/mp4">
+                    type="video/mp4" loading="lazy">
                 Votre navigateur ne supporte pas la lecture de vidéos.
             </video>
         </section>
