--- a/fr/theimitationgame.html
+++ b/fr/theimitationgame.html
@@ -112,7 +112,7 @@
             <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
                 <source
                     src="../assets/video/IMITATION GAME - Bande Annonce Officielle VF - Benedict Cumberbatch Keira Knightley (2015).mp4"
-                    type="video/mp4">
+                    type="video/mp4" loading="lazy">
                 Votre navigateur ne supporte pas la lecture de vidéos.
             </video>
         </section>
