Ajout de lien hypertexte + correction de certains éléments

--- a/en/adalovelace.html
+++ b/en/adalovelace.html
@@ -98,7 +98,9 @@
             <h3 class="info-block__title">Information about this person</h3>
             <div class="info-block__wrapper">
                 <div class="info-block__image">
-                    <img src="../assets/img/Image1_page_Ada.avif" alt="Portrait of Ada Lovelace" loading="lazy">
+                    <a href="https://en.wikipedia.org/wiki/Ada_Lovelace" target="_blank" rel="noopener noreferrer">
+                        <img src="../assets/img/Image1_page_Ada.avif" alt="Portrait of Ada Lovelace" loading="lazy">
+                    </a>
                     <img src="../assets/img/signature.svg" alt="Signature of Ada Lovelace" loading="lazy">
                 </div>
                 <div class="info-block__content">
