--- a/fr/scienceada.html
+++ b/fr/scienceada.html
@@ -108,7 +108,9 @@
             </div>
         </section>
         <section class="image__representation">
-            <img src="../assets/img/Image1_page_Science.avif" alt="Image de la machine analytique" loading="lazy">
+            <a href="https://fr.wikipedia.org/wiki/Machine_analytique" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/Image1_page_Science.avif" alt="Image de la machine analytique" loading="lazy">
+            </a>
         </section>
         <section class="text__main">
             <h2 class="textmono-title">Comment a-t-elle fait?
