--- a/fr/theimitationgame.html
+++ b/fr/theimitationgame.html
@@ -134,8 +134,10 @@
             </div>
         </section>
         <section class="image__representation">
-            <img src="../assets/img/Image1_page_Imitation.avif"
-                alt="Image d'Alan Turing dans le film The Imitation Game" loading="lazy">
+            <a href="https://fr.wikipedia.org/wiki/Imitation_Game" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/Image1_page_Imitation.avif"
+                    alt="Image d'Alan Turing dans le film The Imitation Game" loading="lazy">
+            </a>
         </section>
     </main>
     <footer class="footer" role="contentinfo">
