--- a/en/scienceada.html
+++ b/en/scienceada.html
@@ -106,7 +106,9 @@
             </div>
         </section>
         <section class="image__representation">
-            <img src="../assets/img/Image1_page_Science.avif" alt="Image of the analytical engine" loading="lazy">
+            <a href="https://en.wikipedia.org/wiki/Analytical_engine" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/Image1_page_Science.avif" alt="Image of the analytical engine" loading="lazy">
+            </a>
         </section>
         <section class="text__main">
             <h2 class="textmono-title">How did she do it?
