--- a/en/theimitationgame.html
+++ b/en/theimitationgame.html
@@ -129,8 +129,10 @@
             </div>
         </section>
         <section class="image__representation">
-            <img src="../assets/img/Image1_page_Imitation.avif"
-                alt="Image of Alan Turing in the film The Imitation Game" loading="lazy">
+            <a href="https://en.wikipedia.org/wiki/The_Imitation_Game" target="_blank" rel="noopener noreferrer">
+                <img src="../assets/img/Image1_page_Imitation.avif"
+                    alt="Image of Alan Turing in the film The Imitation Game" loading="lazy">
+            </a>
         </section>
     </main>
     <footer class="footer" role="contentinfo">
