--- a/fr/adalovelace.html
+++ b/fr/adalovelace.html
@@ -100,7 +100,9 @@
             <h3 class="info-block__title">Informations sur cette personne</h3>
             <div class="info-block__wrapper">
                 <div class="info-block__image">
-                    <img src="../assets/img/Image1_page_Ada.avif" alt="Portrait d'Ada Lovelace" loading="lazy">
+                    <a href="https://fr.wikipedia.org/wiki/Ada_Lovelace" target="_blank" rel="noopener noreferrer">
+                        <img src="../assets/img/Image1_page_Ada.avif" alt="Portrait d'Ada Lovelace" loading="lazy">
+                    </a>
                     <img src="../assets/img/signature.svg" alt="Signature d'Ada Lovelace" loading="lazy">
                 </div>
                 <div class="info-block__content">
