Ajout de lien hypertextes dans le glossaire

--- a/en/glossaire.html
+++ b/en/glossaire.html
@@ -90,29 +90,36 @@
         </section>
         <section class="Texte__principal-glossaire">
             <div class="navyblue__block">
-                <div class="textmono-title--glossaire">Algorithm :</div>
+                <div class="textmono-title--glossaire"><a href="https://en.wikipedia.org/wiki/Algorithm" target="_blank"
+                        rel="noopener noreferrer">Algorithm</a> :</div>
                 <p>A sequence of precise instructions or rules for performing a task or solving a problem.</p>
-                <div class="textmono-title--glossaire">Charles Babbage :</div>
+                <div class="textmono-title--glossaire"><a href="https://en.wikipedia.org/wiki/Charles_Babbage"
+                        target="_blank" rel="noopener noreferrer">Charles Babbage</a> :</div>
                 <p>A 19th-century British mathematician and inventor, considered the father of computers. He conceived
                     and designed the analytical engine, the ancestor of modern computers, with the intellectual
                     assistance of Ada Lovelace.</p>
-                <div class="textmono-title--glossaire">Analytical Engine :</div>
+                <div class="textmono-title--glossaire"><a href="https://en.wikipedia.org/wiki/Analytical_Engine"
+                        target="_blank" rel="noopener noreferrer">Analytical Engine</a> :</div>
                 <p>A programmable calculating machine designed by Charles Babbage. This machine could have executed
                     algorithms using punch cards, and Ada Lovelace formalized the concept of a computer program for this
                     device.</p>
-                <div class="textmono-title--glossaire">Bernoulli numbers :</div>
+                <div class="textmono-title--glossaire"><a href="https://en.wikipedia.org/wiki/Bernoulli_number"
+                        target="_blank" rel="noopener noreferrer">Bernoulli numbers</a> :</div>
                 <p>A sequence of rational numbers studied in mathematics, particularly when calculating certain
                     algebraic sums. Ada Lovelace created an algorithm enabling the analytical engine to calculate
                     Bernoulli numbers, which is considered to be the first known computer program.</p>
-                <div class="textmono-title--glossaire">Alan Turing :</div>
+                <div class="textmono-title--glossaire"><a href="https://en.wikipedia.org/wiki/Alan_Turing"
+                        target="_blank" rel="noopener noreferrer">Alan Turing</a> :</div>
                 <p>A 20th-century British mathematician and logician, he was a key figure in artificial intelligence and
                     cryptanalysis. He recognized the importance of Ada Lovelace's work and drew inspiration from her
                     ideas to develop the theory of the Turing machine, the basis of modern computing.</p>
-                <div class="textmono-title--glossaire">Joan Clarke :</div>
+                <div class="textmono-title--glossaire"><a href="https://en.wikipedia.org/wiki/Joan_Clarke"
+                        target="_blank" rel="noopener noreferrer">Joan Clarke</a> :</div>
                 <p>British mathematician and cryptanalyst who collaborated with Alan Turing to decrypt the Enigma code
                     during World War II. Like Ada Lovelace, she was long overlooked in the history of science despite
                     her major contributions.</p>
-                <div class="textmono-title--glossaire">Jean C. Baudet :</div>
+                <div class="textmono-title--glossaire"><a href="https://en.wikipedia.org/wiki/Jean_C._Baudet"
+                        target="_blank" rel="noopener noreferrer">Jean C. Baudet</a> :</div>
                 <p>Belgian philosopher, historian, and writer specializing in the history of science and technology. In
                     his work, he analyzes the birth of computer science, the evolution of machine concepts, and the
                     recognition of key figures such as Ada Lovelace.</p>
