--- a/fr/glossaire.html
+++ b/fr/glossaire.html
@@ -92,30 +92,37 @@
         </section>
         <section class="Texte__principal-glossaire">
             <div class="navyblue__block">
-                <div class="textmono-title--glossaire">Algorithme :</div>
+                <div class="textmono-title--glossaire"><a href="https://fr.wikipedia.org/wiki/Algorithme"
+                        target="_blank" rel="noopener noreferrer">Algorithme</a> :</div>
                 <p>Suite d’instructions ou de règles précises permettant d’effectuer une tâche ou de résoudre un
                     problème.</p>
-                <div class="textmono-title--glossaire">Charles Babbage :</div>
+                <div class="textmono-title--glossaire"><a href="https://fr.wikipedia.org/wiki/Charles_Babbage"
+                        target="_blank" rel="noopener noreferrer">Charles Babbage</a> :</div>
                 <p>Mathématicien et inventeur britannique du XIXe siècle, considéré comme le père des ordinateurs. Il a
                     imaginé et conçu la machine analytique, ancêtre des ordinateurs modernes, avec l’aide intellectuelle
                     d’Ada Lovelace.</p>
-                <div class="textmono-title--glossaire">Machine Analytique :</div>
+                <div class="textmono-title--glossaire"><a href="https://fr.wikipedia.org/wiki/Machine_analytique"
+                        target="_blank" rel="noopener noreferrer">Machine Analytique</a> :</div>
                 <p>Projet de machine à calculer programmable inventé par Charles Babbage. Cette machine aurait pu
                     exécuter des algorithmes grâce à des cartes perforées, et Ada Lovelace a formalisé le concept de
                     programme informatique pour cet appareil.</p>
-                <div class="textmono-title--glossaire">Nombres de Bernoulli :</div>
+                <div class="textmono-title--glossaire"><a href="https://fr.wikipedia.org/wiki/Nombre_de_Bernoulli"
+                        target="_blank" rel="noopener noreferrer">Nombres de Bernoulli</a> :</div>
                 <p>Suite de nombres rationnels étudiés en mathématiques, notamment lors du calcul de certaines sommes
                     algébriques. Ada Lovelace a créé un algorithme permettant à la machine analytique de calculer les
                     nombres de Bernoulli, ce qui constitue le premier programme informatique connu.</p>
-                <div class="textmono-title--glossaire">Alan Turing :</div>
+                <div class="textmono-title--glossaire"><a href="https://fr.wikipedia.org/wiki/Alan_Turing"
+                        target="_blank" rel="noopener noreferrer">Alan Turing</a> :</div>
                 <p>Mathématicien et logicien britannique du XXe siècle, figure clé de l’intelligence artificielle et de
                     la cryptanalyse. Il a reconnu l’importance des travaux d’Ada Lovelace et s’est inspiré de ses
                     réflexions pour développer la théorie de la machine de Turing, base de l’informatique moderne.</p>
-                <div class="textmono-title--glossaire">Joan Clarke:</div>
+                <div class="textmono-title--glossaire"><a href="https://fr.wikipedia.org/wiki/Joan_Clarke"
+                        target="_blank" rel="noopener noreferrer">Joan Clarke</a> :</div>
                 <p>Mathématicienne et cryptanalyste britannique qui a collaboré avec Alan Turing pour décrypter le code
                     Enigma durant la Seconde Guerre mondiale. Comme Ada Lovelace, elle a longtemps été méconnue dans
                     l’histoire des sciences malgré ses contributions majeures.</p>
-                <div class="textmono-title--glossaire">Jean C. Baudet:</div>
+                <div class="textmono-title--glossaire"><a href="https://fr.wikipedia.org/wiki/Jean_C._Baudet"
+                        target="_blank" rel="noopener noreferrer">Jean C. Baudet</a> :</div>
                 <p>Philosophe, historien et écrivain belge, spécialiste de l’histoire des sciences et des techniques.
                     Dans ses travaux, il analyse la naissance de l’informatique, l’évolution des concepts de machines et
                     la reconnaissance de figures clés comme Ada Lovelace.</p>
