encore des légers changement

--- a/en/effetmatilda.html
+++ b/en/effetmatilda.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </section>
-        <h1 class="header__title">The Matilda <br> Effect</h1>
+        <h1 class="header__title">Matilda Effect</h1>
         <div class="language-selector" role="navigation" aria-label="Language selector">
             <a href="/fr/effetmatilda.html" class="language-selector__link language-selector__link--active"
                 aria-label="Switch to French version">EN</a>
