--- a/en/scienceada.html
+++ b/en/scienceada.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </section>
-        <h1 class="header__title">Science From Ada</h1>
+        <h1 class="header__title">Ada's Science</h1>
         <div class="language-selector" role="navigation" aria-label="language selector">
             <a href="/fr/scienceada.html" class="language-selector__link language-selector__link--active"
                 aria-label="Switch to French version">EN</a>
