--- a/fr/index.html
+++ b/fr/index.html
@@ -126,7 +126,7 @@
         </section>
 
         <section class="section__title">
-            <h2>Articles :</h2>
+            <h2>Articles Principaux :</h2>
         </section>
         <section class="carousel">
             <div class="carousel__container">
