--- a/en/index.html
+++ b/en/index.html
@@ -119,7 +119,7 @@
         </section>
 
         <section class="section__title">
-            <h2>Articles:</h2>
+            <h2>Main Articles:</h2>
         </section>
         <section class="carousel">
             <div class="carousel__container">
