--- a/fr/contact.html
+++ b/fr/contact.html
@@ -88,9 +88,7 @@
     </nav>
 
     <main>
-        <section class="hero--contact">
-        </section>
-        <section class="hero-space">
+        <section class="hero">
         </section>
         <section class="contact-section">
             <form class="contact-form" action="#" method="post">
