--- a/fr/scienceada.html
+++ b/fr/scienceada.html
@@ -21,7 +21,7 @@
                 </div>
             </div>
         </section>
-        <h1 class="header__title">La Science <br> d'Ada</h1>
+        <h1 class="header__title">Science <br> d'Ada</h1>
         <div class="language-selector" role="navigation" aria-label="Sélecteur de langue">
             <a href="/en/scienceada.html" class="language-selector__link language-selector__link--active"
                 aria-label="Passer à la version anglaise">FR</a>
