Correction de certains éléments

--- a/en/index.html
+++ b/en/index.html
@@ -38,37 +38,37 @@
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
-                        style="background-image: url('../assets/img/hero_page_accueil2.avif')">
+                        style="background-image: url('/assets/img/hero_page_accueil2.avif')">
                         <span>Home</span>
                     </a>
                 </li>
                 <li>
                     <a href="adalovelace.html" class="menu__button"
-                        style="background-image: url('../assets/img/card1.avif')">
+                        style="background-image: url('/assets/img/card1.avif')">
                         <span>Ada Lovelace</span>
                     </a>
                 </li>
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
-                        style="background-image: url('../assets/img/card2.avif')">
+                        style="background-image: url('/assets/img/card2.avif')">
                         <span> The Matilda Effect</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
-                        style="background-image: url('../assets/img/card3.avif')">
+                        style="background-image: url('/assets/img/card3.avif')">
                         <span>Science from Ada</span>
                     </a>
                 </li>
                 <li>
                     <a href="theimitationgame.html" class="menu__button"
-                        style="background-image: url('../assets/img/card4.avif')">
+                        style="background-image: url('/assets/img/card4.avif')">
                         <span>The Imitation Game</span>
                     </a>
                 </li>
                 <li>
                     <a href="litterature.html" class="menu__button"
-                        style="background-image: url('../assets/img/card5.avif')">
+                        style="background-image: url('/assets/img/card5.avif')">
                         <span>Ada in Literature</span>
                     </a>
                 </li>
@@ -112,8 +112,9 @@
         </section>
         <section class="youtube_video">
             <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
-                <source src="../assets/video/The Story of Ada Lovelace_ The World's First Computer Programmer.mp4"
-                    type="video/mp4" loading="lazy">
+                <source
+                    src="../assets/video/The%20Story%20of%20Ada%20Lovelace_%20The%20World's%20First%20Computer%20Programmer.mp4"
+                    type="video/mp4">
                 Your browser does not support video playback.
             </video>
         </section>
