--- a/en/scienceada.html
+++ b/en/scienceada.html
@@ -39,37 +39,37 @@
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
-                        style="background-image: url('../assets/img/hero_page_accueil2.avif')">
+                        style="background-image: url('/assets/img/hero_page_accueil2.avif')">
                         <span>Home</span>
                     </a>
                 </li>
                 <li>
                     <a href="adalovelace.html" class="menu__button"
-                        style="background-image: url('../assets/img/card1.avif')">
+                        style="background-image: url('/assets/img/card1.avif')">
                         <span>Ada Lovelace</span>
                     </a>
                 </li>
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
-                        style="background-image: url('../assets/img/card2.avif')">
+                        style="background-image: url('/assets/img/card2.avif')">
                         <span>The Matilda Effect</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
-                        style="background-image: url('../assets/img/card3.avif')">
+                        style="background-image: url('/assets/img/card3.avif')">
                         <span>Science From Ada</span>
                     </a>
                 </li>
                 <li>
                     <a href="theimitationgame.html" class="menu__button"
-                        style="background-image: url('../assets/img/card4.avif')">
+                        style="background-image: url('/assets/img/card4.avif')">
                         <span>The Imitation Game</span>
                     </a>
                 </li>
                 <li>
                     <a href="litterature.html" class="menu__button"
-                        style="background-image: url('../assets/img/card5.avif')">
+                        style="background-image: url('/assets/img/card5.avif')">
                         <span>Ada in Literature</span>
                     </a>
                 </li>
