--- a/fr/index.html
+++ b/fr/index.html
@@ -38,37 +38,37 @@
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
-                        style="background-image: url('../assets/img/hero_page_accueil2.avif')">
+                        style="background-image: url('/assets/img/hero_page_accueil2.avif')">
                         <span>Page d'accueil</span>
                     </a>
                 </li>
                 <li>
                     <a href="adalovelace.html" class="menu__button"
-                        style="background-image: url('../assets/img/card1.avif')">
+                        style="background-image: url('/assets/img/card1.avif')">
                         <span>Ada Lovelace</span>
                     </a>
                 </li>
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
-                        style="background-image: url('../assets/img/card2.avif')">
+                        style="background-image: url('/assets/img/card2.avif')">
                         <span>L'effet Matilda</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
-                        style="background-image: url('../assets/img/card3.avif')">
+                        style="background-image: url('/assets/img/card3.avif')">
                         <span>La science d'Ada</span>
                     </a>
                 </li>
                 <li>
                     <a href="theimitationgame.html" class="menu__button"
-                        style="background-image: url('../assets/img/card4.avif')">
+                        style="background-image: url('/assets/img/card4.avif')">
                         <span>The Imitation Game</span>
                     </a>
                 </li>
                 <li>
                     <a href="litterature.html" class="menu__button"
-                        style="background-image: url('../assets/img/card5.avif')">
+                        style="background-image: url('/assets/img/card5.avif')">
                         <span>Ada dans la littérature</span>
                     </a>
                 </li>
@@ -119,8 +119,8 @@
         <section class="youtube_video">
             <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
                 <source
-                    src="../assets/video/Ada Lovelace - L'invention de l'ordinateur _ Cherchez la femme ! _ ARTE.mp4"
-                    type="video/mp4" loading="lazy">
+                    src="../assets/video/Ada%20Lovelace%20-%20L'invention%20de%20l'ordinateur%20_%20Cherchez%20la%20femme%20!%20_%20ARTE.mp4"
+                    type="video/mp4">
                 Votre navigateur ne supporte pas la lecture de vidéos.
             </video>
         </section>
