--- a/fr/theimitationgame.html
+++ b/fr/theimitationgame.html
@@ -39,37 +39,37 @@
             <ul class="menu__list" role="menu">
                 <li>
                     <a href="index.html" class="menu__button"
-                        style="background-image: url('../assets/img/hero_page_accueil2.avif')">
+                        style="background-image: url('/assets/img/hero_page_accueil2.avif')">
                         <span>Page d'accueil</span>
                     </a>
                 </li>
                 <li>
                     <a href="adalovelace.html" class="menu__button"
-                        style="background-image: url('../assets/img/card1.avif')">
+                        style="background-image: url('/assets/img/card1.avif')">
                         <span>Ada Lovelace</span>
                     </a>
                 </li>
                 <li>
                     <a href="effetmatilda.html" class="menu__button"
-                        style="background-image: url('../assets/img/card2.avif')">
+                        style="background-image: url('/assets/img/card2.avif')">
                         <span>L'effet Matilda</span>
                     </a>
                 </li>
                 <li>
                     <a href="scienceada.html" class="menu__button"
-                        style="background-image: url('../assets/img/card3.avif')">
+                        style="background-image: url('/assets/img/card3.avif')">
                         <span>La science d'Ada</span>
                     </a>
                 </li>
                 <li>
                     <a href="theimitationgame.html" class="menu__button"
-                        style="background-image: url('../assets/img/card4.avif')">
+                        style="background-image: url('/assets/img/card4.avif')">
                         <span>The Imitation Game</span>
                     </a>
                 </li>
                 <li>
                     <a href="litterature.html" class="menu__button"
-                        style="background-image: url('../assets/img/card5.avif')">
+                        style="background-image: url('/assets/img/card5.avif')">
                         <span>Ada dans la littérature</span>
                     </a>
                 </li>
@@ -111,8 +111,8 @@
         <section class="youtube_video">
             <video width="100%" height="auto" controls style="max-width: 560px; aspect-ratio: 16/9;">
                 <source
-                    src="../assets/video/IMITATION GAME - Bande Annonce Officielle VF - Benedict Cumberbatch Keira Knightley (2015).mp4"
-                    type="video/mp4" loading="lazy">
+                    src="../assets/video/IMITATION%20GAME%20-%20Bande%20Annonce%20Officielle%20VF%20-%20Benedict%20Cumberbatch%20Keira%20Knightley%20(2015).mp4"
+                    type="video/mp4">
                 Votre navigateur ne supporte pas la lecture de vidéos.
             </video>
         </section>
